# opencv-cpp-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_xmake.py  build_xmake.sh  conanfile.txt  xmake.lua
.github/workflows/: build.yml
src/: main.cpp
